tests/cmp/record-pat-single-dot.golden
Parse Error:
tests/cmp/record-pat-single-dot.trp:3:13 unexpected token TokenDot
