tests/cmp/record-pat-single-dot.trp
(* Test: single dot instead of two - should fail *)
let val r = {a = 1, b = 2, c = 3}
    val {a, .} = r
in a
end